[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Formigas/Ant_01.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Formiga1.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.146269, 0.0925019, 0.103995 )

[node name="Formiga1" type="Spatial"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
script = ExtResource( 2 )

[node name="Shot" type="Timer" parent="."]
autostart = true

[node name="Spatial" parent="." instance=ExtResource( 1 )]

[node name="Formiga_01" parent="Spatial" index="0"]
transform = Transform( 0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0, 0, 0 )

[node name="Bulet_position" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0560744, 0.174878, 0 )

[node name="Body" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0308789 )

[node name="CollisionShape" type="CollisionShape" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0490429, 0.0926754, -0.00130012 )
shape = SubResource( 1 )

[connection signal="timeout" from="Shot" to="." method="_on_Shot_timeout"]

[editable path="Spatial"]
[editable path="Spatial/Formiga_01"]
